# better_dwm_statusbar

./: Cargo.toml
src/: clock_server.rs  lib.rs  messages.rs  module.rs  module_worker.rs  prelude.rs  setup.rs  status_server.rs  system.rs  x11_utils.rs
src/bar_modules/: battery.rs  custom_script.rs  mod.rs  ram_usage.rs  time.rs
