[package]
name = "better_dwm_statusbar"
version = "0.1.0"
authors = ["Martin Linhard <linmad17@htl-kaindorf.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
x11 = { version = "2", features = ["xlib"]}
chrono = "0.4"
lazy_static = "1.4"
systemstat = "0.1"
